<resources>
    <string name="app_name">Dibujos del Dia</string>
    <string name="foto_of_the_day">Фотография дня</string>
    <string name="link_is_empty">Ссылка пустая!</string>
    <string name="error">Ошибка!</string>
    <string name="search_wiki">Искать в Википедии</string>
    <string name="wiki_helper_text">Поищите в Википедии</string>
    <string name="text_is_too_long">Текст слишком длинный!</string>
    <string name="no_description">К фотографии нет описания.</string>
    <string name="settings">Настройки</string>
    <string name="lovely">Любимые</string>
    <string name="settings_2">Settings</string>
    <string name="search">Поиск</string>
    <string name="not_a_picture">Сегодня НАСА присылает не картинку.</string>
    <string name="choose_app_theme">Выберите тему приложения:</string>
    <string name="standart">Стандартная</string>
    <string name="black_and_white">Чёрно-белая</string>
    <string name="bright">Яркая</string>
    <string name="this_theme_is_not_ready_yet">Эта тема ещё не разработана.</string>
    <string name="help_to_observe_sky">Советы по наблюдению ночного неба</string>
    <string name="about_app">О приложении</string>
    <string name="what_can_i_do_if_no_picture">Что делать, если нет картинки?</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="weather">Погода</string>
    <string name="enter_lat">Введите широту:</string>
    <string name="enter_lon">Введите долготу:</string>
    <string name="ok">Применить!</string>
    <string name="longer">Отдалить</string>
    <string name="closer">Приблизить</string>
    <string name="help">Подсказки</string>
    <string name="lat_help">Широта должна укладываться от северного полюса — +90°, до южного полюса — −90°</string>
    <string name="lon_help">Долгота должна укладываться от 0° до +180° на восток и от 0° до −180° на запад</string>
    <string name="random_sol">Случайный сол</string>
    <string name="enter_sol">Введите сол</string>
    <string name="from_26_to_3206">от 26 до 3206</string>
    <string name="take_my_sol">Принять мой сол</string>
    <string name="wrong_sol">Вы ввели неправильный сол</string>
    <string name="change_camera_button">Сменить камеру на заднюю</string>
    <string name="change_camera_to_front">Сменить камеру на переднюю</string>
    <string name="go_to_curiosity_button">Перейти на сайт Кюриосити!</string>
    <string name="my_coordinats">Мои координаты</string>
    <string name="place">Место</string>
    <string name="coordinats">Координаты</string>
    <string name="write_your_note">Введите Вашу заметку</string>
    <string name="place2">Место</string>
    <string name="wait_not_load_yet">Подождите, ещё не загрузилось...</string>
</resources>